# linalg-stuff

./: .gitignore  README.md  app.py  pyproject.toml  uv.toml
app/: main.py
app/modules/: linear_system.py  svd_compression.py
app/modules/pagerank/: page_rank.py  sample_input.py
app/modules/semanticsimilarity/: sample_input.py  semantic_similarity.py
app/utils/: benchmark.py  file_handler.py  graph_visualizer.py
src/: file_handler.py  svd_compression.py
